tickets system, lots of slash commands, fix overflows

--- a/src/pages/commands/index.styl
+++ b/src/pages/commands/index.styl
@@ -24,6 +24,8 @@ page-body
   flex-direction: column
   align-items: center
   gap: 10px
+  padding-bottom: 10px
+  margin-bottom: var(--header-height)
 
   a
     text-decoration: none
