--- a/src/style.styl
+++ b/src/style.styl
@@ -279,6 +279,8 @@ body::-webkit-scrollbar-thumb
 
 #content
   min-height: calc(100vh - var(--header-height) * 2)
+  position: relative
+  z-index: 0
   
 .page
   position: relative
